PS-4212 : 8.0 : Fix various places where macros are redefined or used when undefined PS-4213 : 8.0 : Fix -Wunused-parameter PS-4214 : 8.0 : Fix -Wsuggest-attribute=format
- RocksDB (not Myrocks) has several cases of using undefined macros
  (#if SOMEMACRO).  We don't have any direct control over RocksDB so report
  upstream and loosen the error until such time it is fixed.

- RocksDB (not MyRocks) has hundreds of cases of unused parameters.  We don't
  have any direct control over RocksDB so report upstream and loosen the error
  until such time it is fixed.

- RocksDB (not MyRocks) has a few of cases of variadic format functions which
  are not annotated with attribute 'format.  We don't have any direct control
  over RocksDB so report upstream and loosen the error until such time it is
  fixed.

--- a/storage/rocksdb/CMakeLists.txt
+++ b/storage/rocksdb/CMakeLists.txt
@@ -54,6 +54,18 @@ ENDIF()
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable")
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-variable")
 
+# Relax undefined definition warnings for 8.0 until RocksDB catches up
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-undef")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-undef")
+
+# Relax unused parameter warnings for 8.0 until RocksDB catches up
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter")
+
+# Relax suggest-attribute=format warnings for 8.0 until RocksDB catches up
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-suggest-attribute=format")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-suggest-attribute=format")
+
 IF (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/rocksdb/Makefile")
   MESSAGE(SEND_ERROR "Missing Makefile in rocksdb directory. Try \"git submodule update\".")
 ENDIF ()
