--- a/.travis.yml
+++ b/.travis.yml
@@ -205,7 +205,7 @@ script:
        sudo ln -s $(which ccache) /usr/lib/ccache/$CXX || echo;
     else
        brew update;
-       brew install ccache protobuf;
+       brew install ccache protobuf icu4c;
        brew link ccache;
        export PATH="/usr/local/opt/ccache/libexec:$PATH";
     fi
@@ -226,6 +226,8 @@ script:
       -DDOWNLOAD_BOOST=1
       -DWITH_BOOST=../deps
       -DWITH_KEYRING_VAULT=ON
+      -DWITHOUT_TOKUDB=ON
+      -DWITH_ROCKSDB=OFF
     ";
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       CMAKE_OPT+="
@@ -237,24 +239,12 @@ script:
       else
         CMAKE_OPT+=" -DWITH_NUMA=ON";
       fi;
-      `# disable RocksDB for gcc-8 until MyRocks is warning-free`;
-      if [[ "$CC" == "gcc-8" ]]; then NOT_GCC_8=0; else NOT_GCC_8=1; fi;
-      if [[ "$TRAVIS_REPO_SLUG" == "percona/percona-server" ]]; then
-        CMAKE_OPT+=" -DWITH_TOKUDB=ON -DWITH_ROCKSDB=$NOT_GCC_8";
-      else
-        `# disable TokuDB or RocksDB as developers' forks must fit in the 50 min time limit`;
-        if [[ "$BUILD" == "Debug" ]] && [[ "$CC" == "clang-$VERSION" ]]; then
-          CMAKE_OPT+=" -DWITH_TOKUDB=OFF -DWITH_ROCKSDB=$NOT_GCC_8";
-        else
-          CMAKE_OPT+=" -DWITH_TOKUDB=ON -DWITH_ROCKSDB=OFF";
-        fi;
-      fi;
     else
       CMAKE_OPT+="
         -DMYSQL_MAINTAINER_MODE=OFF
         -DWITH_PROTOBUF=system
-        -DWITH_TOKUDB=OFF
-        -DWITH_ROCKSDB=OFF
+        -DWITH_SYSTEM_LIBS=ON
+        -DWITH_ICU=/usr/local/opt/icu4c
       ";
     fi;
     if [[ "$INVERTED" == "ON" ]]; then
