--- a/.travis.yml
+++ b/.travis.yml
@@ -205,7 +205,7 @@ script:
        sudo ln -s $(which ccache) /usr/lib/ccache/$CXX || echo;
     else
        brew update;
-       brew install ccache protobuf icu4c;
+       brew install ccache protobuf icu4c lz4;
        brew link ccache;
        export PATH="/usr/local/opt/ccache/libexec:$PATH";
     fi
