PS-4724 (Re-enable PAM plugin for PS 8.0)
- rename those .c source files which include MySQL plugin API headers
  to .cc, because starting with 8.0, only C++ plugins are supported;
- use std::min instead of own MIN macro;
- use enum class instead of enum where applicable;
- use nullptr instead of NULL;
- move local variable declaration to first uses, where possible;
- include MySQL headers using "" instead of <>;
- use constexpr insted of enum and #define, where possible;
- use bool instead of int, where possible;
- replace __attribute__ with MY_ATTRIBUTE;
- remove the autotools-based standalone plugin build infrastructure
  due to not being used since 5.5 and thus likely bitrotten;
- re-enable the plugin for Travis-CI testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -236,6 +236,7 @@ script:
       -DWITH_KEYRING_VAULT=ON
       -DWITHOUT_TOKUDB=ON
       -DWITH_ROCKSDB=OFF
+      -DWITH_PAM=ON
     ";
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       CMAKE_OPT+="
