--- a/plugin/innodb_memcached/innodb_memcache/CMakeLists.txt
+++ b/plugin/innodb_memcached/innodb_memcache/CMakeLists.txt
@@ -31,6 +31,9 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/plugin/innodb_memcached/innodb_memcache
 IF(CMAKE_C_FLAGS MATCHES "-Werror")
   STRING(REGEX REPLACE "-Werror( |$)" "" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
 ENDIF(CMAKE_C_FLAGS MATCHES "-Werror")
+IF(CMAKE_CXX_FLAGS MATCHES "-Werror")
+  STRING(REGEX REPLACE "-Werror( |$)" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+ENDIF(CMAKE_CXX_FLAGS MATCHES "-Werror")
 
 # Set extra flags for the C/CXX compiler
 IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_C_COMPILER_ID MATCHES "Clang")
