--- a/sql/CMakeLists.txt
+++ b/sql/CMakeLists.txt
@@ -498,6 +498,7 @@ SET(SQL_SHARED_SOURCES
   trigger_creation_ctx.cc
   trigger_chain.cc
   tztime.cc
+  userstat.cc
   uniques.cc
   xa.cc
   ${MYSQL_SERVER_SUB_COMPONENT_SOURCES}
