--- a/storage/ndb/test/run-test/CMakeLists.txt
+++ b/storage/ndb/test/run-test/CMakeLists.txt
@@ -39,7 +39,7 @@ ENDIF()
 MYSQL_ADD_EXECUTABLE(atrt main.cpp setup.cpp files.cpp db.cpp command.cpp
   DESTINATION mysql-test/ndb
   )
-TARGET_LINK_LIBRARIES(atrt ndbNDBT ndbclient_static mysqlclient)
+TARGET_LINK_LIBRARIES(atrt ndbNDBT ndbclient_static perconaserverclient)
 
 FILE(GLOB testcase_files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*-tests.txt")
 ADD_TEST(NAME check_testcase_files
