--- a/storage/ndb/test/tools/CMakeLists.txt
+++ b/storage/ndb/test/tools/CMakeLists.txt
@@ -79,6 +79,6 @@ IF(NOT WIN32)
   ADD_EXECUTABLE(spj_performance_test spj_performance_test.cpp)
   TARGET_LINK_LIBRARIES(spj_performance_test ndbNDBT)
   TARGET_LINK_LIBRARIES(spj_performance_test ndbclient_so)
-  TARGET_LINK_LIBRARIES(spj_performance_test mysqlclient)
+  TARGET_LINK_LIBRARIES(spj_performance_test perconaserverclient)
   INSTALL(TARGETS spj_performance_test DESTINATION bin)
 ENDIF()
