--- a/storage/ndb/tools/CMakeLists.txt
+++ b/storage/ndb/tools/CMakeLists.txt
@@ -210,10 +210,10 @@ IF(NOT CMAKE_SYSTEM_NAME MATCHES "SunOS")
       ndb_top.cpp
       COMPONENT ClusterTools)
     IF(NCURSES_HAS_STDSCR)
-      TARGET_LINK_LIBRARIES(ndb_top mysqlclient ${NCURSESW_LIB})
+      TARGET_LINK_LIBRARIES(ndb_top perconaserverclient ${NCURSESW_LIB})
     ELSE()
       TARGET_LINK_LIBRARIES(ndb_top
-                            mysqlclient
+                            perconaserverclient
                             ${NCURSESW_LIB}
                             ${NCURSES_TINFO_LIB})
     ENDIF()
