--- a/unittest/gunit/CMakeLists.txt
+++ b/unittest/gunit/CMakeLists.txt
@@ -398,6 +398,7 @@ SET(SERVER_TESTS
   log_throttle
   make_sortkey
   mdl_sync
+  mf_iocache
   my_decimal
   opt_costconstants
   opt_costmodel
@@ -532,3 +533,4 @@ ADD_SUBDIRECTORY(components/mysql_server)
 ADD_SUBDIRECTORY(xplugin)
 ADD_SUBDIRECTORY(group_replication)
 ADD_SUBDIRECTORY(libmysqlgcs)
+ADD_SUBDIRECTORY(keyring_vault)
