--- a/unittest/gunit/group_replication/CMakeLists.txt
+++ b/unittest/gunit/group_replication/CMakeLists.txt
@@ -45,7 +45,7 @@ FOREACH(test ${TESTS})
   TARGET_LINK_LIBRARIES(${test}-t gr_unit_test_resource gunit_small ${GCS_LIBRARY})
   # mysys_ssl/libmysys_ssl.a already includes SSL objects on Solaris
   IF(NOT CMAKE_SYSTEM_NAME MATCHES "SunOS")
-    TARGET_LINK_LIBRARIES(${test}-t mysqlclient)
+    TARGET_LINK_LIBRARIES(${test}-t perconaserverclient)
   ENDIF()
 ENDFOREACH()
 
