--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -351,8 +351,8 @@ ELSE()
   SET(TARGET_LINUX "false")
 ENDIF()
 
-# Use cmake variables to inspect dependencies for
-# mysqlclient library (add -l stuff)
+# Use cmake variables to inspect dependencies for 
+# perconaserverclient library (add -l stuff)
 SET(CLIENT_LIBS "")
 SET(LIBS "")
 
@@ -385,11 +385,11 @@ MACRO(EXTRACT_LINK_LIBRARIES target var)
   STRING(REGEX REPLACE "[ ]+$" "" ${var} "${${var}}")
 ENDMACRO()
 
-EXTRACT_LINK_LIBRARIES(mysqlclient CLIENT_LIBS)
+EXTRACT_LINK_LIBRARIES(perconaserverclient CLIENT_LIBS)
 
 IF(MSVC)
-  GET_TARGET_PROPERTY(LIBMYSQL_OS_SHLIB_VERSION mysqlclient VERSION)
-  GET_TARGET_PROPERTY(LIBMYSQL_OS_OUTPUT_NAME mysqlclient OUTPUT_NAME)
+  GET_TARGET_PROPERTY(LIBMYSQL_OS_SHLIB_VERSION perconaserverclient VERSION)
+  GET_TARGET_PROPERTY(LIBMYSQL_OS_OUTPUT_NAME perconaserverclient OUTPUT_NAME)
 ELSE()
   GET_TARGET_PROPERTY(LIBMYSQL_OS_SHLIB_VERSION libmysql VERSION)
   GET_TARGET_PROPERTY(LIBMYSQL_OS_OUTPUT_NAME libmysql OUTPUT_NAME)
@@ -458,6 +458,8 @@ ELSE()
     SET(BIN_SCRIPTS
       mysql_config
       mysqldumpslow
+      ps_mysqld_helper
+      ps-admin
       )
   ELSE()
     SET(BIN_SCRIPTS
@@ -465,6 +467,8 @@ ELSE()
       mysqldumpslow
       mysqld_multi
       mysqld_safe
+      ps_mysqld_helper
+      ps-admin
       )
   ENDIF()
 
