--- a/sql/CMakeLists.txt
+++ b/sql/CMakeLists.txt
@@ -74,7 +74,7 @@ ADD_CUSTOM_COMMAND(
   DEPENDS gen_keyword_list
 )
 
-ADD_DEFINITIONS(-DMYSQL_SERVER)
+ADD_DEFINITIONS(-DMYSQL_SERVER -DHAVE_POOL_OF_THREADS)
 
 SET(DD_SOURCES
   dd/collection.cc
@@ -327,6 +327,7 @@ SET(SQL_SHARED_SOURCES
   item_create.cc
   item_func.cc
   item_json_func.cc
+  item_keyring_func.cc
   item_regexp_func.cc
   item_row.cc 
   item_strfunc.cc
@@ -486,6 +487,7 @@ SET(SQL_SHARED_SOURCES
   sql_union.cc
   sql_update.cc
   sql_view.cc
+  sql_zip_dict.cc
   stateless_allocator.cc
   strfunc.cc
   sys_vars.cc
@@ -497,6 +499,7 @@ SET(SQL_SHARED_SOURCES
   table_trigger_dispatcher.cc
   tc_log.cc
   thr_malloc.cc 
+  threadpool_common.cc
   transaction.cc
   transaction_info.cc
   trigger.cc
@@ -542,6 +545,13 @@ ENDIF()
 IF(WIN32)
   LIST(APPEND SQL_SHARED_SOURCES resourcegroups/platform/thread_attrs_api_win.cc)
 ENDIF()
+
+IF(WIN32)
+  LIST(APPEND SQL_SHARED_SOURCES threadpool_win.cc)
+ELSE()
+  LIST(APPEND SQL_SHARED_SOURCES threadpool_unix.cc)
+ENDIF()
+
 
 SET(SQL_SOURCE
   ${GEN_SOURCES}
