--- a/sql/CMakeLists.txt
+++ b/sql/CMakeLists.txt
@@ -498,6 +498,7 @@ SET(SQL_SHARED_SOURCES
   sql_union.cc
   sql_update.cc
   sql_view.cc
+  sql_zip_dict.cc
   stateless_allocator.cc
   strfunc.cc
   sys_vars.cc
